# Speckit-Plus-Hackathon

./: .env  README.md
.specify/memory/: constitution.md
backend/: .env  cli.py  config.py  main.py  pyproject.toml  test_components.py
backend/crawler/: extractor.py  test_extraction.py
backend/docs/: usage.md
backend/embedder/: generator.py  test_embedder.py
backend/models/: entities.py  validation.py
backend/processor/: chunker.py  test_chunker.py
backend/services/: base_service.py
backend/storage/: qdrant_handler.py  test_storage.py
backend/utils/: exceptions.py  helpers.py  logger.py
history/prompts/1-book-embeddings/: 1-create-book-embeddings-implementation-plan.plan.prompt.md  1-create-book-embeddings-specification.spec.prompt.md  1-create-book-embeddings-tasks.tasks.prompt.md  1-implement-book-embeddings-backend.implementation.prompt.md
history/prompts/constitution/: 1-create-physical-ai-humanoid-robotics-constitution.constitution.prompt.md
history/prompts/physical-ai-book/: 2-create-physical-ai-book-spec.spec.prompt.md  3-create-book-implementation-plan.plan.prompt.md  4-create-book-implementation-tasks.tasks.prompt.md  5-implement-book-lessons.implement.prompt.md
specs/1-book-embeddings/: spec.md  tasks.md
specs/1-book-embeddings/checklists/: requirements.md
specs/1-book-embeddings/impl/: data-model.md  plan.md  quickstart.md  research.md
specs/1-physical-ai-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: index.md
(+9 files in other folders)
